# xjoy2key

./: .gitignore  AUTHORS  ChangeLog  README  compile.sh  config.c  config.h  configure.in  example.cfg  io.c  io.h  x11.c  x11.h  xjoy2key.c
src/: Makefile.am  config.c  config.h  io.c  io.h  x11.c  x11.h  xjoy2key.c
